# openmechanic

./: .gitignore  CMakeLists.txt  README.md
openmechanic-engine/: AsyncObjectContainer.h  CMakeLists.txt
openmechanic-engine/ClientInterfaces/: DataObjectContainer.h  DataObjectHandler.h  FullBodyInterface.h  GameWorldInterface.h  MessageDispatcher.h  MessageQueue.h  RigidBodyPartInterface.h
openmechanic-engine/ClientInterfaces/Messages/: FullBodyMsgs.h  GameWorldMsgs.h  Msg.h  RigidBodyPartMsgs.h
openmechanic-engine/Control/: BlockControlFactory.cpp  BlockControlFactory.h  Connection.cpp  Connection.h  ConnectionEndpoint.h  ControlEngine.cpp  ControlEngine.h  ControlObject.cpp  ControlObject.h
openmechanic-engine/GameEngine/: ThreadedLocalGameEngine.cpp
openmechanic-engine/GamePhysics/: BodyBlockFactory.cpp  FullBody.cpp  FullBody.h  GameWorld.cpp  GameWorld.h  Joint.h  Lift.cpp  Lift.h  PhysicalObject.cpp  PhysicalObject.h  RigidBodyPart.cpp  RigidBodyPart.h  Spring.h
openmechanic-engine/GamePhysics/Blocks/: BlockDriverSeat.cpp  BlockWheel.cpp  BodyBlock.cpp
openmechanic-engine/GamePresentation/: ChangeEvents.h  Commands.h  Dispatch.h  EventQueue.h  ObjectState.h
openmechanic-engine/Serialization/: GameSaver.cpp  GameSaver.h
openmechanic-engine/Utils/: ClientInterfaceHelpers.h  GameObject.h  Resource.h  ResourceConatiner.h  ResourceIDGenerator.cpp  ResourceIDGenerator.h  ResourceManager.h
openmechanic-engine/core/: AsyncObjectContainer.cpp  AsyncObjectContainer.h
openmechanic-engine/core/GamePhysics/: BodyBlockFactory.h  BodyBlockInstance.cpp  BodyBlockInstance.h  FullBody.cpp  FullBody.h  GameContext.h  GameWorld.cpp  GameWorld.h  RigidBodyPart.cpp  RigidBodyPart.h
openmechanic-engine/core/Utils/: DynamicArray.h  (+4 more)
openmechanic-game/: BlockEntityFactory.cpp  BlockEntityFactory.h  CMakeLists.txt  GameObjectDataContainer.h  GameVisualization.cpp  GameVisualization.h  GameWorldVisualizer.cpp  GameWorldVisualizer.h  MousePointingState.h  RigidBodyPartVisualizer.cpp  RigidBodyPartVisualizer.h  main.cpp
(+52 files in other folders)
